# egui_software_backend

./: .gitignore  Cargo.toml  README.md  clippy.toml  deny.toml
.github/workflows/: rust.yaml  rust.yml
constify/: Cargo.toml  README.md
constify/src/: lib.rs
constify/tests/: mod.rs
examples/: generate_frame_inputs.rs  render_frame_inputs.rs  winit.rs  winit_hello.rs  winit_raw.rs  winit_simple.rs  winit_simple_viewport_test.rs  winit_viewport_test.rs
examples/bevy_example/: Cargo.toml
examples/bevy_example/src/: egui_backend_plugin.rs  main.rs  softbuffer_plugin.rs
examples/utils/: winit_app.rs
src/: color.rs  color_avx2.rs  color_neon.rs  color_sse41.rs  color_x86_64_simd.rs  dirty_rect.rs  egui_texture.rs  hash.rs  i64vec2.rs  lib.rs  raster.rs  raster_bary.rs  raster_rect.rs  raster_span.rs  render.rs  stats.rs  test_render.rs  winit.rs
src/color/: avx2.rs  mod.rs  neon.rs  sse41.rs
src/math/: i64vec2.rs  mod.rs  vec4.rs
src/raster/: bary.rs  mod.rs  rect.rs  span.rs  tri.rs
tests/: mod.rs
