[package]
name = "egui_software_backend"
version = "0.0.1"
edition = "2024"

[dependencies]
egui = { version = "0.32", default-features = false }

egui_kittest = { version = "0.32", optional = true }
image = { version = "0.25", optional = true }
bytemuck = { version = "1.23", optional = true }

[dev-dependencies]
egui = { version = "0.32", features = ["default_fonts"] }
eframe = "0.32"
egui_kittest = { version = "0.32", features = ["snapshot", "wgpu"] }
egui_demo_lib = { version = "0.32" }
egui_extras = { version = "0.32", features = ["all_loaders"] }
egui-winit = { version = "0.32", default-features = false }
epaint_default_fonts = "0.32"

softbuffer = { version = "0.4" }
image = { version = "0.25", features = ["jpeg", "png"] }
winit = { version = "0.30" }
bytemuck = { version = "1.23" }
nv-flip = "0.1.2"
argh = "0.1"


# Enable optimization in debug mode
[profile.dev]
opt-level = 3

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3

[workspace]
# run with `cargo run -p bevy_example`
members = ["examples/bevy_example"]

[features]
#default = ["test_render"]

# test with `cargo test --features test_render`
test_render = ["dep:bytemuck", "dep:image", "dep:egui_kittest"]
