[package]
name = "egui_software_backend"
version = "0.0.1"
edition = "2024"

[dependencies]
egui = { version = "0.32", default-features = false }
bytemuck = { version = "1.23" }
strength_reduce = "0.2.4"
constify = { path = "constify" }

rayon = { version = "1.11.0", optional = true }
log = { version = "0.4.28", optional = true }

# Optional dependencies for automated testing: 
egui_kittest = { version = "0.32", optional = true }
image = { version = "0.25", optional = true }

[dev-dependencies]
egui_software_backend = { path = ".", features = ["test_render"] }

egui = { version = "0.32", features = ["default_fonts"] }
eframe = "0.32"
egui_kittest = { version = "0.32", features = ["snapshot", "wgpu"] }
egui_demo_lib = { version = "0.32" }
egui_extras = { version = "0.32", features = ["all_loaders"] }
egui-winit = { version = "0.32", default-features = false }
epaint_default_fonts = "0.32"

softbuffer = { version = "0.4" }
image = { version = "0.25", features = ["jpeg", "png"] }
winit = { version = "0.30" }
bytemuck = { version = "1.23" }
dify = "0.7"
argh = "0.1"


# Enable optimization in debug mode
[profile.dev]
opt-level = 3

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3

[workspace]
# run bevy example with `cargo run -p bevy_example --release`
members = ["examples/bevy_example", "constify"]

[features]

## Turn on the `log` feature, that makes egui_software_backend log some errors using the [`log`](https://docs.rs/log) crate.
log = ["dep:log"]

## Enable parallel rasterisation and compositing using [`rayon`](https://docs.rs/rayon).
rayon = ["dep:rayon"]

raster_stats = []
test_render = ["dep:image", "dep:egui_kittest"]
