[package]
name = "constify"
description = "A procedural macro for basic static specialization."
version = "0.0.1"
edition = "2024"
homepage = "https://github.com/DGriffin91/egui_software_backend"
repository = "https://github.com/DGriffin91/egui_software_backend"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["const", "specialization", "dispatch", "currying"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
