[package]
name = "bevy_example"
version = "0.0.1"
edition = "2024"

[dependencies]
egui = { version = "0.32", features = ["default_fonts", "bytemuck"] }

egui_software_backend = { path = "../.." }
egui_demo_lib = { version = "0.32" }
egui_extras = { version = "0.32", features = ["all_loaders"] }
epaint_default_fonts = "0.32"

bevy = { version = "0.16" }
bevy_egui = { version = "0.36" }

softbuffer = { version = "0.4" }
image = { version = "0.25", features = ["jpeg", "png"] }
bytemuck = { version = "1.23" }
argh = "0.1"
